<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/app_name"
            app:titleTextColor="@android:color/white"
            android:background="@color/colorPrimary">

    </androidx.appcompat.widget.Toolbar>
    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                    android:id="@+id/headCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/linearLayout">

                <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <ImageView
                            android:layout_width="200dp"
                            android:layout_height="150dp"
                            android:layout_margin="8dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/title"/>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:text="@string/website"
                            android:textColor="@color/colorPrimary"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal"
                    android:weightSum="1"
                    app:layout_constraintTop_toBottomOf="@id/headCard">

                <Button
                        android:id="@+id/album"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_weight="0.5"
                        android:background="@drawable/button_green"
                        android:textColor="@android:color/white"
                        android:text="@string/album">
                </Button>

                <Button
                        android:id="@+id/screen"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_weight="0.5"
                        android:background="@drawable/button_green"
                        android:textColor="@android:color/white"
                        android:text="@string/screen">
                </Button>
            </LinearLayout>
            <androidx.cardview.widget.CardView
                    android:id="@+id/imageListCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout">
                <imagecompression.yedajiang44.com.mvp.ui.widget.UpMoveNoConflictRecyclerView
                        android:id="@+id/imageList"
                        android:layout_width="match_parent"
                        android:layout_height="200dp">

                </imagecompression.yedajiang44.com.mvp.ui.widget.UpMoveNoConflictRecyclerView>
            </androidx.cardview.widget.CardView>

            <Button
                    android:id="@+id/compression"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/button_green"
                    android:textColor="@android:color/white"
                    android:text="@string/compression"
                    app:layout_constraintTop_toBottomOf="@id/imageListCard"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>